public/stylesheets/main.css
body {
  font-family: 'Work Sans', sans-serif;
  background-color: #F9F7F7;
}

.carousel-item {
  text-align: center;
} 

.caraousel-img {
  align-content: center;
  height: 380px;
  width: 900px;
}

#loginButton {
  width: 80%;
  display: block;
}

.passwordWarningHidden {
  display: none;
}

#pieChart {
  width: 100%;
  height: 500px;
}

#barChart {
  width: 100%;
  height: 500px;
}

.carousel-control-next-icon {
  background-color: black !important;
}

.carousel-control-prev-icon {
  background-color: black !important;
}

.carousel-control-prev {
  width: 2%;
}

.carousel-control-next {
  width: 2%;
}

.checked {
  color: orange;
}
.realChecked {
  color: orange;
}

.btn-group-xs > .btn, .btn-xs {
  padding: .25rem .4rem;
  font-size: .875rem;
  line-height: .5;
  border-radius: .2rem;
}

/** spinner **/
#loader { 
  border: 12px solid #f3f3f3; 
  border-radius: 50%; 
  border-top: 12px solid #444444; 
  width: 70px; 
  height: 70px; 
  animation: spin 1s linear infinite; 
  z-index: 999;
} 
@keyframes spin { 
  100% { 
      transform: rotate(360deg); 
  } 
} 
.center { 
  position: absolute; 
  top: 50%;  
  left: 50%; 
} 

.draggable:hover {
  cursor: move;
  cursor: grab;
}

.draggable:active {
  cursor: grabbing;
}

.arrows {
  margin-right: 10px;
}

.arrows:hover {
  color: darkorange;
}

.starClick:hover {
  cursor: pointer;
}

.fillOut {
  border: 1px solid red;
  padding: 10px;
  border-radius: 15px;
}

.btn.btn-primary[disabled] {
  background-color: grey;
  cursor: not-allowed;
  opacity: 0.7;
}

select:hover {
  cursor: pointer;
}

